fix: adjust OpenCloud's client_id to be consistent with its other client_ids

--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -173,7 +173,7 @@ identity_providers:
       # OpenCloud, but it needs two clients!
       - audience: []
         authorization_policy: two_factor
-        client_id: opencloud-web
+        client_id: OpenCloudWeb
         client_name: OpenCloud
         consent_mode: auto
         grant_types:
