--- a/.devcontainer/Containerfile
+++ b/.devcontainer/Containerfile
@@ -2,11 +2,13 @@
 ARG PYTHON_VERSION=3.13
 
 FROM ghcr.io/hadolint/hadolint:v2.14.0@sha256:27086352fd5e1907ea2b934eb1023f217c5ae087992eb59fde121dce9c9ff21e AS hadolint
+FROM registry.k8s.io/kustomize/kustomize:v5.7.1 AS kustomize
 FROM koalaman/shellcheck:stable@sha256:bb596a0d169b85ddd81d8b6d3a2ff6d5baf5fca10b97f575ebc647c3dff62b3d AS shellcheck
 
 FROM mcr.microsoft.com/devcontainers/python:1-${PYTHON_VERSION}
 
 COPY --chmod=777 --from=hadolint /bin/hadolint /usr/local/bin/hadolint
+COPY --chmod=777 --from=kustomize /app/kustomize /usr/local/bin/kustomize
 COPY --chmod=777 --from=shellcheck /bin/shellcheck /usr/local/bin/shellcheck
 
 # Setup and Configure OpenPubkey SSH
