feat: keep X-Request-Id headers in access logs

--- a/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
@@ -6,6 +6,7 @@ accessLog:
       defaultMode: drop
       names:
         User-Agent: keep
+        X-Request-Id: keep
   filePath: "" # log to stdout
   filters:
     statusCodes:
