feat: bump up responding read and write timeouts to better handle larger files in websecure-ext too

--- a/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
@@ -49,6 +49,11 @@ entryPoints:
       middlewares:
         - strict-transport-security@file
         - crowdsec@file
+    transport:
+      # See comment for websecure about why this exists!
+      respondingTimeouts:
+        readTimeout: 5m
+        writeTimeout: 5m
 experimental:
   plugins:
     crowdsec-bouncer:
