fix: typo in "longhorn" fails to group longhorn things

--- a/renovate.json
+++ b/renovate.json
@@ -237,7 +237,7 @@
       "description": "Group for all Longhorn updates",
       "groupName": "longhorn",
       "matchPackageNames": [
-        "lonhorn/cli",
+        "longhorn/cli",
         "longhorn/longhorn"
       ]
     },
