feat: upgrade kairos image to v0.3.0

--- a/plays/kairos/upgrade.yml
+++ b/plays/kairos/upgrade.yml
@@ -66,7 +66,7 @@
           - upgrade
           - --recovery
           - --source
-          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ recovery_image_version }}"
+          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ recovery_image_version | trim('v') }}"
       become: true
       when: os_image_version != target_image_version
     - name: Install update
@@ -75,7 +75,7 @@
           - kairos-agent
           - upgrade
           - --source
-          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ target_image_version }}"
+          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ target_image_version | trim('v') }}"
       become: true
       when: os_image_version != target_image_version
     - name: Note if the host needs to be rebooted
@@ -90,10 +90,9 @@
       loop: "{{ ansible_play_batch }}"
       when: hostvars[item].reboot_required
   vars:
-    recovery_image_version: 0.2.2
+    recovery_image_version: v0.2.5
     # renovate: datasource=docker depName=ghcr.io/marinatedconcrete/kairos-ubuntu
-    target_image_version: 0.2.5
-
+    target_image_version: v0.3.0
 - name: Serially drain and reboot hosts that need to be rebooted
   hosts: ToReboot
   gather_facts: false
