--- a/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/frigate/config.yml
@@ -77,6 +77,10 @@ mqtt:
   user: frigate
   password: '{FRIGATE_MQTT_PASSWORD}'
 objects:
+  filters:
+    person:
+      min_score: 0.6
+      threshold: 0.8
   track:
     - amazon
     - bird
