fix: pull out oidc argocd secret
argo seems to modify this secret, and drops the key

--- a/kustomization/overlays/prod/argocd/patches/add_oidc_config.yml
+++ b/kustomization/overlays/prod/argocd/patches/add_oidc_config.yml
@@ -7,7 +7,7 @@ data:
   oidc.config: |
     cliClientID: argocd-cli
     clientID: argocd
-    clientSecret: $oidc.auth-tswn-us.clientSecret
+    clientSecret: $argocd-oidc-secret:oidc.auth-tswn-us.clientSecret
     enablePKCEAuthentication: true
     enableUserInfoGroups: true
     issuer: https://auth.tswn.us
