feat: migrate authelia to auth namespace

--- a/kustomization/components/authelia/podmonitor.yml
+++ b/kustomization/components/authelia/podmonitor.yml
@@ -2,11 +2,11 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: traefik-podmonitor
+  name: authelia-podmonitor
 spec:
   podMetricsEndpoints:
     - path: /metrics
       port: metrics
   selector:
     matchLabels:
-      app.kubernetes.io/name: traefik
+      app.kubernetes.io/name: authelia
