--- a/kustomization/overlays/prod/crowdsec/configmap/acquis.d/authelia.yaml
+++ b/kustomization/overlays/prod/crowdsec/configmap/acquis.d/authelia.yaml
@@ -2,6 +2,6 @@
 source: loki
 url: http://loki-query-frontend.monitoring.svc.cluster.local:3100/
 query: |
-  {namespace="traefik", container="authelia"}
+  {namespace="auth", container="authelia"}
 labels:
   type: authelia
