--- a/kustomization/overlays/experimental/auth/configmap/authelia/config.yml
+++ b/kustomization/overlays/experimental/auth/configmap/authelia/config.yml
@@ -286,28 +286,22 @@ session:
     high_availability:
       sentinel_name: myMaster
       nodes:
-        - host: authelia-redis-sentinel-0.authelia-redis-sentinel-headless.traefik.svc.cluster.local
+        - host: authelia-redis-sentinel-0.authelia-redis-sentinel-headless.auth.svc.cluster.local
           port: 26379
-        - host: authelia-redis-sentinel-1.authelia-redis-sentinel-headless.traefik.svc.cluster.local
+        - host: authelia-redis-sentinel-1.authelia-redis-sentinel-headless.auth.svc.cluster.local
           port: 26379
-        - host: authelia-redis-sentinel-2.authelia-redis-sentinel-headless.traefik.svc.cluster.local
+        - host: authelia-redis-sentinel-2.authelia-redis-sentinel-headless.auth.svc.cluster.local
           port: 26379
-    host: authelia-redis-replication.traefik.svc.cluster.local
+    host: authelia-redis-replication.auth.svc.cluster.local
     port: 6379
 
 # https://www.authelia.com/configuration/storage/introduction/
 storage: 
   postgres:
-    address: tcp://authelia-storage-16-pg.traefik.svc.cluster.local:5432
+    address: tcp://authelia-17-pg.auth.svc.cluster.local:5432
     database: authelia
     tls:
       skip_verify: true
-
-# https://www.authelia.com/configuration/telemetry/introduction/
-telemetry:
-  metrics:
-    address: tcp://:9959/metrics
-    enabled: true
 
 # https://www.authelia.com/configuration/miscellaneous/introduction/#theme
 theme: dark
