--- a/kustomization/overlays/experimental/opencloud/patches/opencloud/add_config.yml
+++ b/kustomization/overlays/experimental/opencloud/patches/opencloud/add_config.yml
@@ -8,17 +8,13 @@ spec:
     spec:
       containers:
         - env: &opencloud-env
-            - name: IDM_ADMIN_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  key: adminPassword
-                  name: opencloud-secret
             - name: OC_CONFIG_DIR
               value: /etc/opencloud
             # Services to not startup:
             # - idp is not needed because we use authelia
+            # - idm is not needed because we use lldap
             - name: OC_EXCLUDE_RUN_SERVICES
-              value: idp
+              value: idm idp
             - name: OC_INSECURE
               value: "false"
             - name: OC_URL
@@ -41,6 +37,50 @@ spec:
               value: https://auth.tswn.us
             - name: PROXY_ROLE_ASSIGNMENT_OIDC_CLAIM
               value: groups
+            # LDAP Configuration
+            - name: FRONTEND_READONLY_USER_ATTRIBUTES
+              value: user.onPremisesSamAccountName,user.displayName,user.mail,user.passwordProfile,user.memberOf,user.accountEnabled
+            - name: GRAPH_LDAP_SERVER_UUID
+              value: "true"
+            - name: OC_ADMIN_USER_ID
+              value: fc36b6b7-87d5-3162-bac4-caa0da0a9ff5
+            - name: OC_LDAP_BIND_DN
+              value: UID=opencloud,OU=people,DC=tswn,DC=us
+            - name: OC_LDAP_BIND_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: ldapPassword
+                  name: opencloud-secret
+            - name: OC_LDAP_DISABLE_USER_MECHANISM
+              value: none
+            - name: OC_LDAP_GROUP_BASE_DN
+              value: ou=groups,dc=tswn,dc=us
+            - name: OC_LDAP_GROUP_FILTER
+              value: (&(objectclass=groupOfUniqueNames)(uid=opencloud-*))
+            - name: OC_LDAP_GROUP_OBJECTCLASS
+              value: groupOfUniqueNames
+            - name: OC_LDAP_GROUP_SCHEMA_ID
+              value: uuid
+            - name: OC_LDAP_INSECURE
+              value: "true"
+            - name: OC_LDAP_SERVER_WRITE_ENABLED
+              value: "false"
+            - name: OC_LDAP_URI
+              value: ldaps://lldap-svc.auth.svc.cluster.local:636
+            - name: OC_LDAP_USER_BASE_DN
+              value: ou=people,dc=tswn,dc=us
+            - name: OC_LDAP_USER_FILTER
+              value: (&(objectclass=inetOrgPerson)(|(memberOf=cn=opencloudGuest,ou=groups,dc=tswn,dc=us)(memberOf=cn=opencloudUser,ou=groups,dc=tswn,dc=us)(memberOf=cn=opencloudSpaceAdmin,ou=groups,dc=tswn,dc=us)(memberOf=cn=opencloudAdmin,ou=groups,dc=tswn,dc=us)))
+            - name: OC_LDAP_USER_OBJECTCLASS
+              value: inetOrgPerson
+            - name: OC_LDAP_USER_SCHEMA_ID
+              value: uuid
+            - name: OC_LDAP_USER_SCHEMA_USER_TYPE
+              value: opencloud-user-type
+            - name: SETTINGS_SETUP_DEFAULT_ASSIGNMENTS
+              value: "false"
+            - name: WEB_OPTION_ACCOUNT_EDIT_LINK_HREF
+              value: https://idm.tswn.us/
             # Storage Configuration
             - name: OC_DATA_DIR
               value: /var/lib/opencloud
