fix: ignore some attributes opencloud looks for in lldap

--- a/kustomization/overlays/experimental/auth/patches/lldap/add_config.yml
+++ b/kustomization/overlays/experimental/auth/patches/lldap/add_config.yml
@@ -13,6 +13,8 @@ spec:
               value: dc=tswn,dc=us
             - name: LLDAP_HTTP_URL
               value: https://idm.tswn.us
+            - name: LLDAP_IGNORED_USER_ATTRIBUTES
+              value: "[opencloudexternalidentity,opencloudlastsignintimestamp,openclouduserenabled]"
             - name: LLDAP_JWT_SECRET_FILE
               value: /secrets/lldap/config/LLDAP_JWT_SECRET
             - name: LLDAP_KEY_FILE
